force-app/main/default/objects/Origin_Destination__c/Origin_Destination__c.object-meta.xml
<CustomObject>
    <label>Origin Destination</label>
    <nameField>
        <label>Origin Destination Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Origin Destination</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>