force-app/main/default/objects/Origin_Destination__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination</label>
    <referenceTo>Active_Pincode__c</referenceTo>
    <relationshipLabel>Origin Destination (Destination)</relationshipLabel>
    <relationshipName>Origin_Destination1</relationshipName>
    <type>Lookup</type>
</CustomField>