force-app/main/default/objects/Origin_Destination__c/fields/DestinationCity__c.field-meta.xml
<CustomField>
    <fullName>DestinationCity__c</fullName>
    <label>Destination City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cities</valueSetName>
    </valueSet>
</CustomField>