force-app/main/default/objects/Origin_Destination__c/fields/Is_State_to_State__c.field-meta.xml
<CustomField>
    <fullName>Is_State_to_State__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is State to State</label>
    <type>Checkbox</type>
</CustomField>