force-app/main/default/objects/Origin_Destination__c/fields/Line_Haul_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Haul_Number__c</fullName>
    <label>Line Haul Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>