force-app/main/default/objects/Origin_Destination__c/fields/Line_Haul_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Haul_Type__c</fullName>
    <label>Line Haul Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Road</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>