force-app/main/default/objects/Origin_Destination__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin</label>
    <referenceTo>Active_Pincode__c</referenceTo>
    <relationshipLabel>Origin Destination</relationshipLabel>
    <relationshipName>Origin_Destination</relationshipName>
    <type>Lookup</type>
</CustomField>