force-app/main/default/objects/Origin_Destination__c/fields/OriginCity__c.field-meta.xml
<CustomField>
    <fullName>OriginCity__c</fullName>
    <label>Origin City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cities</valueSetName>
    </valueSet>
</CustomField>