force-app/main/default/objects/Origin_Destination__c/fields/Parent_Origin_Destination__c.field-meta.xml
<CustomField>
    <fullName>Parent_Origin_Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Origin Destination</label>
    <referenceTo>Origin_Destination__c</referenceTo>
    <relationshipLabel>Related Line Haul</relationshipLabel>
    <relationshipName>Origin_Destination</relationshipName>
    <type>Lookup</type>
</CustomField>