force-app/main/default/objects/Origin_Destination__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Origin Destination</relationshipLabel>
    <relationshipName>Origin_Destination</relationshipName>
    <type>Lookup</type>
</CustomField>