force-app/main/default/objects/Origin_Destination__c/fields/State_Mode_of_Service__c.field-meta.xml
<CustomField>
    <fullName>State_Mode_of_Service__c</fullName>
    <label>State Mode of Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within City</fullName>
            </value>
            <value>
                <fullName>City-to-City</fullName>
            </value>
            <value>
                <fullName>Express (City-to-City)</fullName>
            </value>
            <value>
                <fullName>Surface (City-to-City)</fullName>
            </value>
            <value>
                <fullName>Door-to-Airport</fullName>
            </value>
            <value>
                <fullName>Vaulting</fullName>
            </value>
            <value>
                <fullName>Special Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>