force-app/main/default/objects/Origin_Destination__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>OriginCity__c</columns>
    <columns>DestinationCity__c</columns>
    <columns>Mode_Of_Service__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>